Lambda Programs and Design patterns